# telephony-lib

./: CMakeLists.txt  README.md
qml/: phonenumber.js  phonenumbers.js  qmldir
